environments/dev/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: phoenix-api
  labels:
    app.kubernetes.io/part-of: phoenix-platform
    environment: dev
spec:
  parentRefs:
    - name: phoenix-dev
      sectionName: https
  hostnames:
    - api-dev.pheonix-project.online
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /inventory
      backendRefs:
        - name: inventory-service
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /users
      backendRefs:
        - name: user-service
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /bookings
      backendRefs:
        - name: booking-service
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/events
      backendRefs:
        - name: event-service
          port: 8081
    - matches:
        - path:
            type: PathPrefix
            value: /api/payments
      backendRefs:
        - name: payment-service
          port: 8084
    - matches:
        - path:
            type: PathPrefix
            value: /api/refunds
      backendRefs:
        - name: payment-service
          port: 8084
